// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <RadioInput /> rendering should render no radio field when not visible 1`] = `
<div
  className=""
/>
`;

exports[`Form component <RadioInput /> rendering should render radio fields correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "placeholder": "type here",
          "values": Array [
            "foo",
            "bar",
          ],
        }
      }
      touched={false}
    >
      <div
        className="antwoorden"
      >
        <div
          className="antwoord"
          key="foo"
        >
          <input
            className="kenmerkradio"
            id="input-field-name-1"
            onClick={[Function]}
          />
          <label
            htmlFor="input-field-name-1"
          >
            foo
          </label>
        </div>
        <div
          className="antwoord"
          key="bar"
        >
          <input
            className="kenmerkradio"
            id="input-field-name-2"
            onClick={[Function]}
          />
          <label
            htmlFor="input-field-name-2"
          >
            bar
          </label>
        </div>
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <RadioInput /> rendering should render zero radio fields when values are not supplied 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "placeholder": "type here",
          "values": undefined,
        }
      }
      touched={false}
    >
      <div
        className="antwoorden"
      />
    </Header>
  </div>
</div>
`;
